[package]
name = "tlsn-mpc-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "mpc_core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ot", "pa", "garble"]
garble = ["regex"]
ot = []
pa = ["elliptic-curve", "p256", "paillier", "curv"]
proto = ["prost", "prost-build"]
serde = ["dep:serde"]

[dependencies]
tlsn-mpc-circuits = { path = "../mpc-circuits" }
clmul = { path = "../clmul" }
matrix-transpose = { path = "../matrix-transpose" }
aes = { workspace = true, features = [] }
cipher.workspace = true
sha2 = { workspace = true, features = ["compress"] }
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
regex = { workspace = true, optional = true }
rayon.workspace = true
curve25519-dalek = { workspace = true, features = ["serde", "rand_core"] }
serde = { workspace = true, features = ["derive"], optional = true }
prost = { workspace = true, optional = true }
thiserror.workspace = true
anyhow.workspace = true
elliptic-curve = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
derive_builder.workspace = true
merlin.workspace = true
curv = { workspace = true, optional = true }

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4"
default-features = false
optional = true

[dev-dependencies]
rstest.workspace = true
criterion.workspace = true
pretty_assertions.workspace = true

[build-dependencies]
prost-build = { workspace = true, optional = true }

[[bench]]
name = "garble"
harness = false

[[bench]]
name = "ot"
harness = false

[[bench]]
name = "point_addition"
harness = false
