[workspace]
members = [
    "mpc-core",
    "garble/*",
    "ot/*",
    "mpc-circuits",
    "mpc-circuits-macros",
    "share-conversion/*",
    "matrix-transpose",
    "clmul",
]

[workspace.dependencies]
# tlsn
tlsn-mpc-core = { path = "mpc-core" }
tlsn-mpc-circuits = { path = "mpc-circuits" }
tlsn-mpc-ot-core = { path = "ot/mpc-ot-core" }
tlsn-mpc-ot = { path = "ot/mpc-ot" }
tlsn-mpc-garble-core = { path = "garble/mpc-garble-core" }
tlsn-mpc-garble = { path = "garble/mpc-garble" }
tlsn-mpc-share-conversion-core = { path = "share-conversion/mpc-share-conversion-core" }
tlsn-share-conversion = { path = "share-conversion/mpc-share-conversion" }
tlsn-utils = { path = "../utils/utils" }
tlsn-utils-aio = { path = "../utils/utils-aio" }
clmul = { path = "clmul" }
matrix-transpose = { path = "matrix-transpose" }

# rand
rand_chacha = "0.3"
rand = "0.8"
rand_core = "0.6"

# crypto
cipher = "0.3"
sha2 = "0.10"
blake3 = "1.3.3"
aes = "0.7"
digest = "0.10"
curve25519-dalek = "4.0.0-rc.0"
elliptic-curve = "0.11"
merlin = "3"
p256 = "0.10"
ghash_rc = { package = "ghash", version = "0.4" }
ark-ff = "0.4"
ark-secp256r1 = "0.4"
num-bigint = "0.4"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1.23"
tokio-util = "0.7"

# serialization
serde = "1.0"
serde_yaml = "0.9"
serde_arrays = "0.1"
bincode = "1.3.3"
prost-build = "0.9"
bytes = "1"
yamux = "0.10"

# testing
prost = "0.9"
rstest = "0.12"
pretty_assertions = "1"
criterion = "0.3"

# config
cfg-if = "1"
cpufeatures = "0.2"
rustversion = "1"

# error/log
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1"
opaque-debug = "0.3"

# misc
clap = "3"
regex = "1"
rayon = "1"
hex = "0.4"
lazy_static = "1"
derive_builder = "0.11"
once_cell = "1"
generic-array = "0.14"
