[package]
name = "tlsn-point-addition"
version = "0.1.0"
edition = "2021"

[lib]
name = "point_addition"

[features]
default = ["mock"]
mock = ["dep:tlsn-mpc-core"]

[dependencies]
tlsn-mpc-core = { path = "../mpc/mpc-core", optional = true }
share-conversion-aio = { path = "../mpc/share-conversion-aio"}
share-conversion-core = { path = "../mpc/share-conversion-core"}
p256 = { version = "0.12", features = ["arithmetic"] }
async-trait = "0.1"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread"] }
rand_chacha = "0.3"
rand = "0.8"

