[package]
name = "pop-mpc-aio"
version = "0.1.0"
edition = "2021"

[dependencies]
pop-mpc-core = { path="../pop-mpc-core" }
tokio = { version="1.17", features=["net","macros","rt","rt-multi-thread"] }
async-trait = "0.1.52"
prost = "0.9"
tokio-tungstenite = "0.17.1"
futures-util = "0.3.21"
aes = { version="0.7.5", features=[]}
cipher = "0.3"
rand = "0.8.5"
rand_core = "0.6.3"
rand_chacha = "0.3.1"
