[package]
name = "pop-mpc-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["garble","ot","paillier","proto"]
garble = ["regex"]
ot = []
paillier = []
proto = ["prost","prost-build"]

[dependencies]
aes = { version="0.7.5", features=[]}
cipher = "0.3"
sha2 = "0.10.1"
rand = "0.7"
rand_core = "0.5"
rand_chacha = "0.2"
regex = { version="1.5.4", optional=true }
rayon = "1.5"
curve25519-dalek = { version = "3", features=["serde"] }
serde = { version = "1", features=["derive"] }
prost = { version="0.9", optional=true }
thiserror = "1.0.30"
anyhow = "1.0.55"

[dev-dependencies]
rstest = "0.12.0"
criterion = "0.3"

[build-dependencies]
prost-build = { version="0.9", optional=true }

[[bench]]
name = "half_gate"
harness = false

[[bench]]
name = "ot"
harness = false

[[bin]]
name = "measure_data"
path = "src/bin/measure_data.rs"