[package]
name = "pop-mpc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = { version="0.7.5", features=[]}
cipher = "0.3"
sha2 = "0.10.1"
rand = "0.7"
rand_core = "0.5"
rand_chacha = "0.2"
regex = "1.5.4"
rayon = "1.5"
curve25519-dalek = { version = "3" }

[dev-dependencies]
rstest = "0.12.0"
criterion = "0.3"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen = "0.2.74"
getrandom = { version="0.2.4", features=["js"] }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3.24"

[[bench]]
name = "half_gate"
harness = false