[package]
name = "pop-tls"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elliptic-curve = "0.11.12"
p256 = "0.10.1"
rand = "0.8.5"
rand_core = "0.6.3"

[dependencies.paillier]
package = "kzen-paillier"
version = "0.4.2"
default-features = false

[dependencies.curv-kzen]
version = "0.9"
# default-features = false
# features = ["num-bigint"]