[workspace]
members = ["hmac-sha256-circuits", "hmac-sha256"]

[workspace.dependencies]
# tlsn
tlsn-mpc-circuits = { path = "../mpc/mpc-circuits" }
tlsn-mpc-core = { path = "../mpc/mpc-core" }
tlsn-mpc-garble-core = { path = "../mpc/garble/mpc-garble-core" }
tlsn-mpc-garble = { path = "../mpc/garble/mpc-garble" }
tlsn-utils = { path = "../utils/utils" }
tlsn-utils-aio = { path = "../utils/utils-aio" }

# rand
rand = "0.8"
rand_chacha = "0.3"

# crypto
sha2 = "0.10"
hmac = "0.12"
digest = "0.10"

# async
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
tokio = "1.23"
tokio-util = "0.7"

# serialization
serde = "1.0"
prost = "0.9"
prost-build = "0.9"

# error/log
thiserror = "1"

# testing
criterion = "0.3"

# misc
derive_builder = "0.11"
once_cell = "1"
generic-array = "0.14"
rayon = "1"
