[package]
name = "tlsn-tls-2pc-aio"
version = "0.1.0"
edition = "2021"

[lib]
name = "tls_2pc_aio"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
tlsn-tls-core = { path = "../tls-core" }
tlsn-tls-client = { path = "../tls-client" }
tlsn-mpc-aio = { path = "../mpc-aio" }
tlsn-mpc-circuits = { path = "../mpc-circuits" }
tlsn-tls-2pc-core = { path = "../tls-2pc-core" }
tlsn-utils-aio = { path = "../utils-aio" }
futures.workspace = true
p256.workspace = true
rand.workspace = true

[dev-dependencies]
tokio.workspace = true
tlsn-mpc-aio = { path = "../mpc-aio", features = ["mock"] }
tlsn-utils-aio = { path = "../utils-aio", features = ["duplex"] }
criterion = { workspace = true, features = ["async", "async_tokio"] }

[[bench]]
name = "prf"
harness = false
