[package]
name = "tlsn-tls-2pc-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "tls_2pc_core"

[features]
default = ["prf", "ghash", "circuits"]
prf = []
ghash = []
circuits = ["c1", "c2", "c3", "c4", "c5", "c6", "c7"]
c1 = []
c2 = []
c3 = []
c4 = []
c5 = []
c6 = []
c7 = []
build-circuits = []
serde = ["dep:serde"]

[dependencies]
tlsn-mpc-circuits = { path = "../mpc-circuits" }
tlsn-mpc-core = { path = "../mpc-core" }
sha2 = { workspace = true, features = ["compress"] }
digest.workspace = true
hmac.workspace = true
elliptic-curve.workspace = true
rand.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
once_cell.workspace = true
gf2-128 = { path = "../gf2-128" }

[dev-dependencies]
criterion.workspace = true
ghash_rc.workspace = true
rand_chacha.workspace = true
hex.workspace = true
curv.workspace = true
num = { workspace = true, features = ["rand"] }
aes = { workspace = true, features = [] }

[build-dependencies]
tlsn-mpc-circuits = { path = "../mpc-circuits" }
tlsn-tls-circuits = { path = "../tls-circuits" }
regex.workspace = true
prost.workspace = true
rayon.workspace = true

[[test]]
# don't run the heavy circuit_test unless explicitely invoked with
# cargo test --test circuit_test
name = "circuit_test"
test = false

[[bench]]
name = "garble"
harness = false

[[bench]]
name = "circuit"
harness = false

[[bench]]
name = "ghash"
harness = false
